--- a/leanchat/src/main/AndroidManifest.xml
+++ b/leanchat/src/main/AndroidManifest.xml
@@ -67,6 +67,10 @@
 
         <activity android:name=".activity.LoginActivity"/>
 
+        <activity android:name=".activity.WebSiteActivity"/>
+
+        <activity android:name=".activity.SendMsgWeb"/>
+
         <activity android:name=".activity.RegisterActivity"/>
 
         <activity android:name=".activity.UpdateContentActivity"/>
