--- a/leanchat/build.gradle
+++ b/leanchat/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.stuxuhai:jpinyin:1.0'
     implementation 'com.android.support:recyclerview-v7:26.0.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
